--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.akshat1"
+        applicationId "com.example.NIC_Dungarpur"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
