--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.akshat1">
+    package="com.example.NIC_Dungarpur">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Akshat1">
-        <activity android:name=".app.Login"
+        <activity android:name="com.example.NIC_Dungarpur.app.Login"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,8 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".app.Dashboard" />
-        <activity android:name=".app.DashboardUser" />
+        <activity android:name="com.example.NIC_Dungarpur.app.Dashboard" />
+        <activity android:name="com.example.NIC_Dungarpur.app.DashboardUser" />
     </application>
 
 </manifest>
