in.nic.raj_dungarpur 1.1 Updated proguard-rules.pro Mood: _ TODO: _;

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,13 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        debug{
+                useProguard true
+                minifyEnabled true
+                shrinkResources true
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
