--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -22,6 +22,6 @@ jobs:
           java-version: 1.8
           
 
-      - name: Build Project
+      - name: Build Project 0.2
         run: ./gradlew assemble
 
