--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -21,7 +21,9 @@ jobs:
         with:
           java-version: 1.8
           
-
-      - name: Build Project 0.2
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+        
+      - name: Build Project 0.3
         run: ./gradlew assemble
 
